dep: new syntax for template import to template - now is template full rendered on frontend

--- a/client/templates/_example_/<user_variable>/index.html
+++ b/client/templates/_example_/<user_variable>/index.html
@@ -19,7 +19,8 @@
 	</head>
 	<body>
 
-		<div ID="template_example_example"><!-- ${ template: "_example_/_example.html" } --></div>
+	Dynamic template content from server data:
+		<span onbase="({ setHtml: content.pathVariables.user_variable })"></span>
 
 	</body>
 </html>
