--- a/client/templates/_example_/sub-component_example.html
+++ b/client/templates/_example_/sub-component_example.html
@@ -16,4 +16,7 @@
 	this.array = [1, 2, 3];
 
 	thisElement.querySelector('[name="ID"]').innerHTML = ++id + ' -';
+
+	/** @type {function(): void} */
+	this.destructor; // this function is called, when is thisElement removed from template
 </script>
