fix: types beta

--- a/client/templates/_example_/index_example.html
+++ b/client/templates/_example_/index_example.html
@@ -20,7 +20,7 @@
 	<body>
 
 		<div ID="template_example_example"
-			onbase="{{ ({ template: '_example_/_example.html', input: {indexTemplateVariable: 'indexTemplateVariableValue'} }) }}"></div>
+			onbase="({ template: '_example_/_example.html', input: {indexTemplateVariable: 'indexTemplateVariableValue'} })"></div>
 
 		<br>
 		<center>Variables in path (util: getRealTemplatePath) - iframe example src="/_example_/ThisIsHttpPathVariable98765":</center>
