--- a/client/templates/_example_/index_example.html
+++ b/client/templates/_example_/index_example.html
@@ -19,8 +19,10 @@
 	</head>
 	<body>
 
-		<div ID="template_example_example"
-			onbase="({ template: '_example_/_example.html', input: {indexTemplateVariable: 'indexTemplateVariableValue'} })"></div>
+		<div ID="template_example_example" onbase="({
+			template: '_example_/_example.html',
+			input: {indexTemplateVariable: 'indexTemplateVariableValue'},
+		})"></div>
 
 		<br>
 		<center>Variables in path (util: getRealTemplatePath) - iframe example src="/_example_/ThisIsHttpPathVariable98765":</center>
