Base.JS version: 2.0.0

--- a/client/templates/_example_/<user_variable>/index.html
+++ b/client/templates/_example_/<user_variable>/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title><!-- ${ write: content.contentExample } --></title>
+		<title><!-- ${ write: serverContent.contentExample } --></title>
 		<meta name="author" content="Author..." />
 		<meta name="description" content="Description..." />
 		<meta name="keywords" content="keywordsA, keywordsB">
@@ -18,9 +18,10 @@
 		<link rel="icon" href="http://www.example.com/images/icon.jpg">
 	</head>
 	<body>
+		<script> /** @type { include("index.js") } */ var js; </script>
 
-	Dynamic template content from server data:
-		<span onbase="({ setHtml: content.pathVariables.user_variable })"></span>
+		Dynamic template server content from server data:
+		<span onbase="w({ setHtml: b.serverContent.pathVariables.user_variable })"></span>
 
 	</body>
 </html>
