--- a/client/templates/_example_/_example.html
+++ b/client/templates/_example_/_example.html
@@ -1,46 +1,49 @@
+<script> /** @type { include("_example.js") } */ var js; </script>
+
 <div ID="template_example">
 	Hello word!
 	<br>
-	Static server content --> <!-- ${ write: content.contentExample } -->
+	Static server content --> <!-- ${ write: serverContent.contentExample } -->
 	<br>
-	Dynamic template content from server data -->
-		<span onbase="({ setHtml: content.contentExample, if: true })"></span>
-		<span onbase="({ setHtml: content.contentExample, if: false })"></span>
+	Dynamic template server content from server data -->
+		<span onbase="w({ setHtml: serverContent.contentExample, if: true })"></span>
+		<span onbase="w({ setHtml: serverContent.contentExample, if: false })"></span>
 	<br>
-	Dynamic template content from JavaScript -->
-		<span onbase="({ setHtml: this.templateJsVariable })"></span>
+	Dynamic template server content from JavaScript -->
+		<span onbase="w({ setHtml: js.templateJsVariable })"></span>
 	<br>
 	Dynamic template DOM attributes modification -->
-		<span onbase="({ setAttr: {title: 'Title'}, setClass: {TestItalic: true} })">TextWithClassAndTitleProperty</span>
+		<span onbase="w({ setAttr: {title: 'Title'}, setClass: {TestItalic: true} })">TextWithClassAndTitleProperty</span>
 	<br>
 	This component element ID -->
 		<span ID="template_example_identifitator"></span>
 	<br>
 	This element ID -->
-		<span ID="template_example_element_id" onbase="({ setHtml: this.id })"></span>
+		<span ID="template_example_element_id" onbase="w({ setHtml: this.id })"></span>
 	<br>
 	Parent JavaScript variable -->
-		<span onbase="({ setHtml: this.parent.indexJsVariable })"></span>
+		<span onbase="w({ setHtml: js.parent.indexJsVariable })"></span>
 	<br>
 	Template input variable -->
-		<span onbase="({ setHtml: this.input.indexTemplateVariable })"></span>
+		<span onbase="w({ setHtml: js.input.indexTemplateVariable })"></span>
 	<br>
 	Event example values --> <span ID="template_example_event_value"></span>
 	<br>
 	<br>
 	Generated table in template: <table>
-		<tr onbase="({ forIn: this.array, key: 'a' })">
-			<td onbase="({ forIn: this.array, key: 'b' })">
-				<b onbase="({ setHtml: +this.array[a] + +this.array[b] * 10 })"
-				   onclick="alert(this.tagName + ': ' + (+this.array[a] + +this.array[b] * 10))"></b>
-				- <span onbase="({ template: '_example_/sub-component_example.html' })"></span>
+		<tr onbase="w({ forIn: js.array, key: 'a' })">
+			<td onbase="w({ forIn: js.array, key: 'i' })">
+				<b onbase="w({ setHtml: +js.array[a] + +js.array[i] * 10 })"
+					onclick="alert(js.tagName + ': ' + (+js.array[a] + +js.array[i] * 10))"
+				></b>
+				- <span onbase="w({ template: '_example_/sub-component_example.html' })"></span>
 			</td>
 		</tr>
 	</table>
 	<br>
 	Generated recursive tree in template: <ul>
-		<li onbase="({
-			forIn: this.groups, key: 'i',
+		<li onbase="w({
+			forIn: js.groups, key: 'i',
 			template: '_example_/recursive-component_example.html', input: {show: i}
 		})"></li>
 	</ul>
