new: the order of functionality inport now does not matter del: window.afterLoadRequires fix: user configurable of jsconfig.json > utils._createIndex fix: utils/getRealTemplatePath.base new: utils/contain.base, utils/get.base and utils/set.base has new types upd: jsconfig.local.js is useble on server upd: utils/defaults.base and utils/merge.base are replaced with utils/update.base upd: storage.read() and storage.write() are removed - please use storage.edit() upd: events...listen((event, output) => {}) has overturned the parameters to events...listen((output, event) => {})

--- a/client/templates/_example_/<user_variable>/index.html
+++ b/client/templates/_example_/<user_variable>/index.html
@@ -18,7 +18,7 @@
 		<link rel="icon" href="http://www.example.com/images/icon.jpg">
 	</head>
 	<body>
-		<script> /** @type { include("index.js") } */ var js; </script>
+		<script> /** @type { import("index.js") } */ var js; </script>
 
 		Dynamic template server content from server data:
 		<span onbase="w({ setHtml: b.serverContent.pathVariables.user_variable })"></span>
