--- a/client/templates/_example_/_example.html
+++ b/client/templates/_example_/_example.html
@@ -1,4 +1,4 @@
-<script> /** @type { include("_example.js") } */ var js; </script>
+<script> /** @type { import("_example.js") } */ var js; </script>
 
 <div ID="template_example">
 	Hello word!
