--- a/client/templates/_example_/index_example.html
+++ b/client/templates/_example_/index_example.html
@@ -19,7 +19,7 @@
 		<link rel="icon" href="http://www.example.com/images/icon.jpg">
 	</head>
 	<body>
-		<script> /** @type { include("index_example.js") } */ var js; </script>
+		<script> /** @type { import("index_example.js") } */ var js; </script>
 
 		<div ID="template_example_example" onbase="w({
 			template: '_example_/_example.html',
